Fix logout button styling on mobile

--- a/less/header.less
+++ b/less/header.less
@@ -421,24 +421,26 @@ label.dropdown-toggle {
 	}
 }
 
-.dropdown-menu > li > form > button {
-	text-align: left;
-	width: 100%;
-	background: none;
-	border: none;
-	display: block;
-	padding: 3px 20px;
-	clear: both;
-	font-weight: normal;
-	line-height: @line-height-base;
-	color: @dropdown-link-color;
-	white-space: nowrap; // prevent links from randomly breaking onto new lines
+.dropdown-menu > li > form {
+	> button, > .btn-link {
+		text-align: left;
+		width: 100%;
+		background: none;
+		border: none;
+		display: block;
+		padding: 3px 20px;
+		clear: both;
+		font-weight: normal;
+		line-height: @line-height-base;
+		color: @dropdown-link-color;
+		white-space: nowrap; // prevent links from randomly breaking onto new lines
 
-	&:hover,
-	&:focus {
-		text-decoration: none;
-		color: @dropdown-link-hover-color;
-		background-color: @dropdown-link-hover-bg;
+		&:hover,
+		&:focus {
+			text-decoration: none;
+			color: @dropdown-link-hover-color;
+			background-color: @dropdown-link-hover-bg;
+		}
 	}
 }
 
