--- a/less/mobile.less
+++ b/less/mobile.less
@@ -63,13 +63,13 @@
 		background-color: #1D1F20;
 		background-image: linear-gradient(145deg, #1D1F20, #404348);
 
-		a {
+		a, button {
 			color: #fff;
 			text-decoration: none;
-		}
 
-		a:hover {
-			text-decoration: underline;
+			&:hover {
+				text-decoration: underline;
+			}
 		}
 
 		.chat-list {
@@ -81,15 +81,15 @@
 				color: #fff;
 				position: relative;
 				height: 60px;
-				
+
 				&:hover {
 					background: none;
 				}
-	
+
 				&:not(:last-child) {
 					border-bottom: none;
 				}
-				
+
 				.main-avatar {
 					position: absolute;
 					top: 0;
@@ -102,11 +102,11 @@
 						border-radius: 0;
 					}
 				}
-				
+
 				.members {
 					display: none;
 				}
-				
+
 				.room-name {
 					display: block;
 					overflow: hidden;
@@ -114,7 +114,7 @@
 					text-overflow: ellipsis;
 					padding-left: 60px;
 				}
-				
+
 				.teaser-content {
 					padding-left: 60px;
 					display: block;
@@ -186,18 +186,20 @@
 	}
 
 	.menu-section-list {
-		padding:0;
+		padding: 0;
 		margin: 10px 0;
-		list-style:none;
+		list-style: none;
 
-		a {
+		a, button {
 			display: block;
 			padding: 10px 20px;
-		}
+			text-align: left;
+			width: 100%;
 
-		a:hover {
-			background-color: rgba(255, 255, 255, 0.1);
-			text-decoration: none;
+			&:hover {
+				background-color: rgba(255, 255, 255, 0.1);
+				text-decoration: none;
+			}
 		}
 	}
 
